--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
         "vee-validate": "^4.11.3",
         "vue": "^3.2.38",
         "vue-chartjs": "^5.2.0",
+        "vue-loading-overlay": "^6.0.3",
         "vue-router": "^4.1.5",
         "vue-step-progress": "^1.0.2",
         "vue-sweetalert2": "^5.0.5",
-        "vue-toast-notification": "3.0",
-        "vue-toastification": "^2.0.0-rc.5",
         "vue3-circle-progress": "^1.0.7",
         "vuejs-paginate-next": "^1.0.2",
         "vuex": "^4.0.2",
